--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                
 			</div>
 		</section>
+	
+	       <section id="footer">
+			video landing page by <a href="https://codepen.io/bradtraversy/pen/BaoWWjb">Brad Traversy</a>
+		</section>
 <!-- partial -->
   
 </body>
